--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.1",
     "react-native-safe-area-view": "^1.0.0",
-    "react-native-screens": "^2.0.0-alpha.17"
+    "react-native-screens": "^2.0.0-alpha.17",
+    "react-navigation-collapsible": "2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
