--- a/package.json
+++ b/package.json
@@ -12,20 +12,26 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
+    "@react-native-firebase/app": "^6.3.4",
+    "@react-native-firebase/database": "^6.3.4",
     "@react-navigation/core": "^5.0.0-alpha.26",
     "@react-navigation/drawer": "^5.0.0-alpha.23",
     "@react-navigation/native": "^5.0.0-alpha.16",
     "@react-navigation/stack": "^5.0.0-alpha.41",
+    "@reduxjs/toolkit": "^1.3.2",
     "flow-bin": "^0.113.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-material-textfield": "^0.16.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.1",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.0.0-alpha.17",
-    "react-navigation-collapsible": "2.0.0"
+    "react-navigation-collapsible": "2.0.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
